apps/base/karakeep/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
